# A-Q-U-A_V

./: .clang-format  .clang-tidy  .gitmessage  AGUA-V_COMPLETE_STRUCTURE.md  AQUA_V_COMPLETE_STRUCTURE_MARKDOWN.md  CHANGELOG.md  CMakeLists.txt  DIRECTORY_STRUCTURE_FINAL.md  GITKEEP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUA-QNS01-25SVD0001-DES-BOB-S&L-TD-ATA-000-00-02-TPL-LIC-001-S&L-v1.0.0.txt  README.md  deployment_manifest.json  docker-compose.yml  mkdocs.yml  nx.json  package.json
.github/: pull_request_template.md
.github/workflows/: jekyll-gh-pages.yml  quantum-ci-cd.yml
BUSINESS-OPERATIONS/SAFETY/TTR/: STANDARD.md
BUSINESS_OPERATIONS/SAFETY/TTR/: Analisis_TTR_GLM.md
BUSINESS_OPERATIONS/STRATEGY/STRATEGIC_PLANNING/: AQUART-DEV-IMP-PLN-PL-PA-S1KD-FDIG-304-00-00-v9.0.0 .md
DES_SOFTWARE_DEV/: QUA-QNS01-25SVD0001-DES-BOB-CDG-TD-DTCEC-360-00-01-TPL-CFG-001-QDAT-v1.0.0.gitignore
DES_SOFTWARE_DEV/ ISO/IEC-29119-AI/: propuesta.md
DES_SOFTWARE_DEV/tools/config/: QUA-QNS01-25SVD0001-DES-BOB-CDG-TD-DTCEC-360-01-01-TPL-CFG-001-QDAT-v1.0.0.json  QUA-QNS01-25SVD0001-DES-BOB-CDG-TD-DTCEC-360-01-02-TPL-CFG-001-QDAT-v1.0.0.yaml
DES_SOFTWARE_DEV/tools/scripts/: QUA-QNS01-25SVD0001-DES-BOB-ORG-SM-DTCEC-310-01-01-TPL-SCR-001-QHPC-v1.0.0.sh  QUA-QNS01-25SVD0001-DES-BOB-ORG-SM-DTCEC-310-01-02-TPL-SCR-001-QSCI-v1.0.0.py  analyze-performance.py  deploy.sh  setup-test-env.sh  smoke-test.sh  validate-docs.py  verify-deployment.sh
DIGITAL_TRANSFORMATION/STANDARD/: ISO-IEC-29119-AI.md
DIGITAL_TRANSFORMATION/STANDARDS/: ISO-IEC-29119-AI.md
DOCUMENTACION_MASTER/: NOMENCLATURE_v7.0  README.md
DOCUMENTACION_MASTER/IMPLEMENTATION_GUIDES/: ENHANCED_HAL_IMPLEMENTATION_GUIDE.md  QUANTUM_HAL_PRODUCTION_GUIDE.md
DOCUMENTACION_MASTER/NOMENCLATURE_v3.1/: AQV-DOC-25MA0001-PRD-BOB-TEC-TD-DTCEC-304-00-01-TPL-TEC-001-QDAT-v3.1.0_Annex-D_Official_Nomenclature_System_v3.1.md
DOCUMENTACION_MASTER/NOMENCLATURE_v5.0/: AQV-DOC-25MA0001-PRD-BOB-TEC-TD-DTCEC-304-00-01-TPL-TEC-001-QDAT-v3.1.0_Annex-D_Official_Nomenclature_System_v3.1.md
DOCUMENTACION_MASTER/NOMENCLATURE_v8.0/: AQUART-OPS-POL-STD-001-RDIG-304-00-01-QDAT-v8.0.0
DOCUMENTACION_MASTER/NOMENCLATURE_v9.0/: AQUART-DES-SDS-ARC-AR-PA-N900-RDIG-304-00-01-v10.0.0.md  AQUART-DES-SDS-ARC-AR-PA-N900-RDIG-304-00-01-v9.0.0.md
DOCUMENTACION_MASTER/PROJECT_CHARTER/: AQA-MAS01-25MAD001-DES-BOB-ORG-TD-ATA-000-00-01-TPL-ORG-READ-QDAT-v7.6.0.md_Master_Documentation_readme.md  AQA-MAS01-25MAD002-DES-BOB-ORG-TD-ATA-000-00-02-TPL-ORG-CHTR-QDAT-v7.6.0_Project_Charter.md  AQUAV-MASTER-DOC001-DES-BOB-ORG-TD-ATA-000-00-01-README-QSTR-v7.6.0_Master_Documentation_readme.md  AQUAV-MASTER-DOC001-DES-BOB-ORG-TD-ATA-000-00-02-CHARTER-QSTR-v7.6.0_Project_Charter.md  STRUCTURE.md
DOCUMENTACION_MASTER/PROJECT_CHARTER/Executive_Documents/: AQA-MAS01-25MAD004-DES-BOB-ORG-TD-ATA-000-01-02-TPL-ORG-MISS-QDAT-v7.6.0_Mission_Statement.md
DOCUMENTACION_MASTER/PROJECT_CHARTER/Executive_Documents/Vision_Mission/: AQA-MAS01-25MAD005-DES-BOB-ORG-TD-ATA-000-01-03-TPL-ORG-VALS-QDAT-v7.6.0_Values_Declaration.md  AQA-MAS01-25MAD006-DES-BOB-ORG-TD-ATA-000-01-04-TPL-ORG-OBJS-QDAT-v7.6.0_Strategic_Objectives.md  (+1 more)
DOCUMENTACION_MASTER/TECHNICAL_ANALYSIS/: ENHANCED_HAL_INTERFACE_ANALYSIS.md  QUANTUM_HAL_SAFETY_CRITICAL_ANALYSIS.md
DOCUMENTACION_MASTER/TECHNICAL_SUMMARIES/: QUANTUM_HAL_ENHANCEMENT_SUMMARY.md
DOCUMENTACION_MASTER/TEMPLATES/BUSINESS_DOCS/: readme.md
DOCUMENTACION_MASTER/TEMPLATES/CERTIFICATION_TEMPLATES/: Readme.md
DOCUMENTACION_MASTER/TEMPLATES/TECHNICAL_DOCS/: AQA-MAS01-25MAD200-DES-BOB-TEC-TD-ATA-000-00-01-TPL-READ-DOC-QDAT-v1.0.0_TD_Templates_readme.md  AQA-MAS01-25MAD201-DES-BOB-TEC-TD-ATA-000-00-02-TPL-INDX-DOC-QDAT-v1.0.0_Templates_library.md  Structure.md
DOCUMENTACION_MASTER/UTCS_SYSTEM/ACCESS_CONTROL/: README.md
MANUFACTURING_SITES/: README.md
PRODUCT_LINES/: README.md
PRODUCT_LINES/QUANTUM/: quantum_implementation_plan.md
Q-AIR/: README.md
Q_DIVISIONS/: README.md
Q_DIVISIONS/QAIR_AERODYNAMICS/: README.md
Q_DIVISIONS/QDAT_DATAGOVERNANCE/: README.md
Q_DIVISIONS/QHPC_COMPUTING/: README.md
Q_DIVISIONS/QSTR_STRUCTURES/: README.md
TOOLS_INFRASTRUCTURE/SOFTWARE_TOOLS/SIMULATION_TOOLS/: GENERATED_FILES_INVENTORY.md  LICENSE.md  NOMENCLATURE_CONFIG.md  README.md  SIMULATION_STANDARDS.md  init-simulation-env.sh  validate-nomenclature.py
Voice_Commands/: AMP-TRAIN-VR001-DES-BOB-CDG-SM-CYB-891-00-01-GITIGNORE-QDAT-v7.6.0  AMP-TRAIN-VR001-DES-BOB-R&I-TD-ACV-771-00-01-README-QSTR-v7.6.0.md  AMP-TRAIN-VR001-DES-BOB-S&L-TD-CYB-823-00-01-LICENSE-QSTR-v7.6.0.md  AMP-TRAIN-VR001-DES-BOB-TEC-SM-DTCEC-341-02-02-AUDIOSTREAM-QDAT-v7.6.0.h  AMP-TRAIN-VR001-DES-BOB-TEC-TD-DTCEC-341-05-01-RECOGCONFIG-QDAT-v7.6.0.json  package.json
Voice_Commands/Config/Grammar/: AMP-TRAIN-VR001-DES-BOB-TEC-TD-DTCEC-392-01-01-CMDGRAMMAR-QDAT-v7.6.0.json
Voice_Commands/Config/Models/: AMP-TRAIN-VR001-DES-BOB-TEC-TD-DTCEC-393-01-01-LANGMODEL-QDAT-v7.6.0.json
Voice_Commands/Config/Responses/: AMP-TRAIN-VR001-DES-BOB-TEC-TD-DTCEC-394-01-01-RESPCONFIG-QDAT-v7.6.0.json
Voice_Commands/Config/SystemSettings/: AMP-TRAIN-VR001-DES-BOB-TEC-TD-DTCEC-391-01-01-AUDIOSET-QDAT-v7.6.0.config
Voice_Commands/Examples/Integration/: AMP-TRAIN-VR001-DES-BOB-EX-DTCEC-396-01-01-VCEXAMPLE-QHPC-v7.6.0.h
annexes/: AnnexA_OrganizationChart.md  AnnexB_QDivisionCompetencyMatrix.md  AnnexC_CorePolicies.md  AnnexD_NomenclatureSystem_v10.md  AnnexD_NomenclatureSystem_v12.3.md  AnnexE_MasterArtifactCategories.md  AnnexF_DocumentationTemplatesLibrary.md  AnnexG_UTCS_ClassificationSystem.md  AnnexH_QDivisionInterfaceControl.md  AnnexI_TrainingDevelopmentPrograms.md  AnnexJ_ExternalValidationReport.md
annexes/templates/design/: AQUART-DES-NC-HDD-GEN-DF-PA-HDDT-0001-SDIG-30400010000-NA-v12.3.0.md  AQUART-OPS-CDR-0001-DES-NC-CDR-GEN-DF-PA-CDRT-0001-SDIG-30400010000-N-A-v12.3.0.md  AQUART-OPS-HARD-0002-DES-NC-HDD-GEN-PA-GE-TEMP-0022-VRTUL-30000000000-N-A-v1.0.0.md
feat/nx-cloud/setup/: nx.app
images/: logo.md
tools/scripts/: prepare-pr.sh
(+254 files in other folders)
